<?xml version="1.0" encoding="utf-8"?>

<!--Copyright (C) 2015 Easy Target-->

<!--Licensed under the Apache License, Version 2.0 (the "License");-->
<!--you may not use this file except in compliance with the License.-->
<!--You may obtain a copy of the License at-->

<!--http://www.apache.org/licenses/LICENSE-2.0.txt-->

<!--Unless required by applicable law or agreed to in writing, software-->
<!--distributed under the License is distributed on an "AS IS" BASIS,-->
<!--WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.-->
<!--See the License for the specific language governing permissions and-->
<!--limitations under the License.-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default">

    <ImageView
        android:id="@+id/image_logo"
        android:contentDescription="@string/app_name"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_above="@+id/button_pick"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_default"
        android:src="@drawable/micopi_logo"/>

    <Button
        android:id="@id/button_pick"
        android:background="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_width="match_parent"
        android:onClick="selectButtonPressed"
        android:text="@string/pick_contact"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size"/>

    <TextView
        android:id="@+id/text_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_pick"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/introduction_text"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/white"/>

    <Button
        android:background="@android:color/white"
        android:layout_below="@+id/text_intro"
        android:layout_height="@dimen/button_height"
        android:layout_width="match_parent"
        android:onClick="crawlButtonPressed"
        android:text="@string/generate_all_pictures"
        android:textSize="@dimen/text_size"
        android:textColor="@color/primary"/>

</RelativeLayout>